--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/font/PlayFair Display/PlayfairDisplay-VariableFont_wght.ttf">
+    <link rel="stylesheet" href="/font/PlayFair Display/PlayfairDisplay-Italic-VariableFont_wght.ttf">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <title>Willow Crest</title>
 </head>
 
@@ -36,10 +39,9 @@
             The engineer did not try to overcome the obstacle, and he was wise.
         </p>
         <p>
-            &#8220 The engineer did not try to overcome the obstacle, and he was wise.
+            <a>&#8220</a> The engineer did not try to overcome the obstacle, and he was wise.
         </p>
-        <p><input type="button">Discover</p>
-
+        <span><input type="button" class="button" value="Discover"></span>
     </div>
 </body>
 
