--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <div>
-        <name>
-            Willow Crest
-        </name>
+        <name><a id="top">
+                Willow Crest
+            </a></name>
         <p>
             This happened, indeed, to the train in which Mr. Fogg was travelling. About twelve o'clock a troop of ten or
             twelve thousand head of buffalo encumbered the track. The locomotive, slackening its speed, tried to clear
@@ -39,9 +39,9 @@
             The engineer did not try to overcome the obstacle, and he was wise.
         </p>
         <p>
-            <a>&#8220</a> The engineer did not try to overcome the obstacle, and he was wise.
+            <b>&#8220</b> The engineer did not try to overcome the obstacle, and he was wise.
         </p>
-        <span><input type="button" class="button" value="Discover"></span>
+        <a href="#top" input type="button" class="button">Discover</a>
     </div>
 </body>
 
