--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="main">
         <name><a id="top">
                 Willow Crest
             </a></name>
@@ -36,12 +36,9 @@
             here's an engineer who doesn't dare to run the locomotive into this herd of beasts!"
         </p>
         <p>
-            The engineer did not try to overcome the obstacle, and he was wise.
-        </p>
-        <p>
             <b>&#8220</b> The engineer did not try to overcome the obstacle, and he was wise.
         </p>
-        <a href="#top" input type="button" class="button">Discover</a>
+        <p><a href="#top" input type="button" class="button">Discover</a></p>
     </div>
 </body>
 
