--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/beetroot-css6/font/PlayFair Display/PlayfairDisplay-VariableFont_wght.ttf">
     <link rel="stylesheet" href="/beetroot-css6/font/PlayFair Display/PlayfairDisplay-Italic-VariableFont_wght.ttf">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="icon" href="beetroot-css6/toons_homer_simpson_homersimpson_2387.png" />
     <title>Willow Crest</title>
 </head>
 
