--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/beetroot-css6/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="/beetroot-css6/font/PlayFair Display/PlayfairDisplay-VariableFont_wght.ttf">
     <link rel="stylesheet" href="/beetroot-css6/font/PlayFair Display/PlayfairDisplay-Italic-VariableFont_wght.ttf">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
